--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">PeanutFM</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">hello word</string>
+    <string-array name="minefragment_itemnames">
+        <item>我的消息</item>
+        <item>我关注的主播</item>
+        <item>我的活动</item>
+        <item>我的优惠券</item>
+        <item>我的收藏</item>
+        <item>收听历史</item>
+        <item>意见反馈</item>
+        <item>设置</item>
+    </string-array>
 </resources>
